[gd_scene load_steps=3 format=3 uid="uid://bvks07f4r776q"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://dw5hnnc0fsan4" path="res://components/apps/daterbase/daterbase.gd" id="2"]

[node name="Daterbase" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QueryHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QueryEdit" type="TextEdit" parent="MarginContainer/VBox/QueryHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RunQueryButton" type="Button" parent="MarginContainer/VBox/QueryHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Run"

[node name="ShowAllButton" type="Button" parent="MarginContainer/VBox/QueryHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Show All"

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsContainer" type="VBoxContainer" parent="MarginContainer/VBox/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
